Fix import bulma, align footer brand

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,3 +1,4 @@
+@import "~bulma/sass/utilities/initial-variables.sass"
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900')
 
 // Config vars
@@ -25,11 +26,8 @@ $size-5: 1.25rem
 $size-6: 1rem
 $size-7: .75rem
 
-
-@import "~bulma/sass/utilities/_all.sass"
-@import "~bulma/sass/base/_all.sass"
-@import "~bulma/sass/elements/_all.sass"
-@import "~bulma/sass/grid/_all.sass"
+// footer
+$footer-padding: 2rem 0
 
 .navbar .navbar-menu
   box-shadow:none !important
@@ -135,4 +133,4 @@ $menu-label-color: $white-ter
     vertical-align: middle
     display: inline
 
-@import "~bulma"
+@import "~bulma/bulma"
